# code-testing-suite

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .pylintrc  ARCHITECTURE_FIX_DUPLICATE_SIDEBAR.md  BENCHMARKER_DETAIL_DIALOG_UPDATE.md  BENCHMARKER_ENHANCEMENTS.md  BENCHMARKER_UI_REDESIGN.md  BENCHMARK_WORKER_IO_UPDATE.md  CENTRALIZED_TEMPLATES_IMPLEMENTATION.md  CLEANUP_IMPLEMENTATION.md  CODE_DUPLICATION_ANALYSIS.md  COMPILER_CONFIG_IMPROVEMENTS.md  CONFIG_OPTIMIZATION_SUMMARY.md  CONSOLE_UI_IMPROVEMENTS.md  CROSS_PLATFORM_ANALYSIS.md  CROSS_PLATFORM_FIXES_APPLIED.md  Code_Testing_Suite_Analysis_Report.md  DATABASE_INTEGRATION_SUMMARY.md  DATABASE_MANAGEMENT.md  DEAD_CODE_ANALYSIS.md  DEBUG_CHECKLIST.md  DESIGN_AUDIT.md  FINAL_OPTIMIZATION_SUMMARY.md  FIND_DEAD_CODE_README.md  IMPROVED_TAB_DESIGN.md  IMPROVEMENTS_SUMMARY.md  KEYERROR_FIX.md  LOGGING_IMPROVEMENTS.md  MIGRATION_COMPLETE_REPORT.md  MIGRATION_PLAN.json  MIGRATION_PLAN.md  MIGRATION_PLAN_DETAILED.md  MIGRATION_PLAN_MASTER.md  MIGRATION_PLAYBOOK.md  MIGRATION_PLAYBOOK_PHASE8_CLEANUP.md  MIGRATION_READY_SUMMARY.md  MULTI_LANGUAGE_INTEGRATION_GUIDE.md  NEW_DESIGN_FEATURES.md  NEW_STRUCTURE_REFERENCE.md  (+130 more)
.cph/: .main.py_e67ee7e645a6b64851fe2a428354c3c8.prob
.github/: WORKFLOW_IMPROVEMENTS.md
.github/workflows/: import-checks.yml  test.yml
ai/: __init__.py
ai/core/: __init__.py  editor_ai.py
ai/models/: __init__.py
ai/templates/: __init__.py  prompt_templates.py
backups/migration_20251006/: benchmarker.py  database_manager.py  detailed_results_widget.py  results_window.py
benchmarks/: __init__.py  performance_tests.py
config/: __init__.py  config_exceptions.py  test_service.json
config/management/: __init__.py  config_persistence.py
config/ui/: config_dialog.py  error_dialog.py  section_builders.py
config/validation/: api_validator_handler.py
constants/: __init__.py  paths.py
database/: database_manager.py
docs/: ANALYSIS_SUMMARY.md  COMPREHENSIVE_ANALYSIS.md  MIGRATION_SUMMARY.md  MIGRATION_TRACKER.md  PHASE_6_COMPLETION_REPORT.md  UNIFIED_STATUS_VIEW_MIGRATION_PLAYBOOK.md  UNIFIED_STATUS_VIEW_REQUIREMENTS.md  migration_playbook.md  todo_reading.md  validation_checklist.md
docs/adr/: 001-src-layout-adoption.md  002-preserve-design-language.md
docs/analysis/: load_to_test_concerns.md
docs/api/: filesnapshot_api.md
docs/bugfix/: duplicate_roles_fix.md
docs/completion/: FILESNAPSHOT_COMPLETE.md
plans/: a.txt
refactor/: README.md  current_tree.json  import_graph.json  rename_map.csv  styles_widgets_analysis.json
resources/: Main.java  a.cpp  a.py  b.cpp  tmp.cpp
scripts/: analyze_complexity.py  analyze_coverage_gaps.py  analyze_import_chain.py  check_import_rules.py  lint_styles.py  measure_startup.py  phase5_create_inits.py  phase5_migrate_windows.py
styles/: __init__.py  html.css  style.py
tests/: README.md  __init__.py  benchmark_baseline.py  conftest.py  performance_baseline.json  test_basic_imports.py  test_functional_baseline.py  test_migration_phase2.py  test_p0_critical_fixes.py  test_phase3_cleanup.py
tools/: compile_runner.py  compiler_runner.py  editor_ai.py  editor_ai_backup.py  editor_ai_new.py  stress_compiler_runner.py  stresser.py  tle_compiler_runner.py  tle_runner.py
utils/: ai_config.py  api_validator_corrupted.py  file_operations.py  logging_config.py  window_factory.py  window_manager.py
v2/: .coverage  main.py  requirements.txt  test_week3_completion.py  test_week4_day1.py  test_week4_day2.py  week4_day2_plan.py  week4_plan.py
views/: base_window.py  config_view.py  main_window.html  main_window.py  main_window_md.md
widgets/: display_area.py  sidebar.py
(+802 files in other folders)
